--- a/index.html
+++ b/index.html
@@ -60,44 +60,109 @@
 					<div class = "statement">
 						<div class = "input-statement">Nancy.education</div>
 						<div class = "return-statement">"2B Computer Science and Business Administration - University of Waterloo"</div>
+						<br />
 						<div class = "input-statement">Nancy.skills</div>
 						<div class = "return-statement">["C++", "Java", "C", "Python", "SQL", "Scheme", "git"]</div>
+						<br />
+						<div class = "input-statement">Nancy.resume</div>
+						<div class = "return-statement"><a rel="noopener" 
+						href="content/Nancy_Resume_2019.pdf" target="_blank">"nancywang.pdf"</a></div>
+						<br />
+						<div class = "input-statement">Nancy.contacts</div>
+						<div class = "return-statement">["<a href="mailto:nancywang882@gmail.com">Email</a>", "<a rel="noopener" href="https://www.linkedin.com/in/nancywang882/">LinkedIn</a>", "<a rel="noopener" href="https://github.com/nancywang882">Github</a>"]</div>
+						<br />
 						<div class = "input-statement">Nancy.interests</div>
 						<div class = "return-statement">["Cooking", "Digital Art", "Game Development", "Table Tennis"]</div>
+						<br />
 						<div class = "input-statement">  <span>&nbsp;</span>
 						</div>
 					</div>
-					
+				</div>
 			</div>
 		</div>
-	</div>
 
 
-		<!-- Side Projects -->
+		<!-- Projects -->
+		
 		<div class="container-fluid portfolio">
+				<div class="project-card">
+					<img src="content/PICBEELogo.png" alt="Gif of site">
+					<div class="description">
+						<h5>PICBEE</h5>
+						<h6>Flutter | Dart | Firebase</h6>
+						<ul style="list-style-type:circle;">
+							<li>Educational app used for teaching newcomers vocabulary with support in 5 different languages: English, French, Chinese, Spanish, Japanese</li>
+							<li>Leveraged Watson's image recogntion API for a more interactive experience</li>
+						</ul>
+					</div>
+				</div>
 
-			<div class="project-card">
-				<img src="objects/portfolio_1.gif" alt="Gif of site">
-				<div class="description">
-					<h5>Module Database</h5>
-					<p> Created using the Bootstrap Framework </p>
-					<a target="_blank" href="http://jmbiwerprojects.com/modules">Visit</a>
+				<div class="project-card">
+					<img src="content/R2R-Logo.png" alt="Gif of site">
+					<div class="description">
+						<h5>RECEIPTS TO RECIPES</h5>
+						<h6>Python | Open CV</h6>
+						<ul style="list-style-type:circle;">
+							<li>Program proides suggestions for recipes given image of a receipt</li>
+							<li>Utilized Tesseract and Open CV to create OCR in Python</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-			<div class="project-card">
-				<img src="objects/portfolio_2.gif" alt="Gif of site">
-				<div class="description">
-					<h5>Business Website</h5>
-					<p> Created using the Bootstrap Framework </p>
+
+				<div class="project-card">
+					<img src="content/SynLogo.png" alt="Gif of site">
+					<div class="description">
+						<h5>Synthesia</h5>
+						<h6>Javascript | HTML</h6>
+						<ul style="list-style-type:circle;">
+							<li>Online music visualizer that is compatible with any audio file</li>
+							<li>Offers options to change different visual components of the app</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</div>
+
+				<div class="project-card">
+					<img src="content/SafeTextLogo.png" alt="Gif of site">
+					<div class="description">
+						<h5>Safe Text</h5>
+						<h6>Android | Java</h6>
+						<ul style="list-style-type:circle;">
+							<li>Tracker app that automatically alerts contacts in the event of an emergency</li>
+							<li>Includes SMS messenger and GPS location tracker to support offline use</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="project-card">
+					<img src="content/bqLogo.png" alt="Gif of site">
+					<div class ="description">
+						<h5>Biquadris</h5>
+						<h6>C++</h6>
+						<ul style="list-style-type:circle;">
+							<li>Replication of the classic Tetris game with multiplayer support</li>
+							<li>Contains all of the traditional Tetris features with new game modes and items</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="project-card">
+					<img src="content/appleRunLogo.png" alt="Gif of site">
+					<div class="description">
+						<h5>Apple Run</h5>
+						<h6>Unity | C#</h6>
+						<ul style="list-style-type:circle;">
+							<li>Desktop compatible infinite 2D platform game with original assets</li>
+							<li>Utilized Unity to create a tiled map with collision detection layers and asset triggers </li>
+						</ul>
+					</div>
+				</div>
+		</div> 
 
 		<!-- Contact -->
-<div class="container-fluid contact">
+		<div class="container-fluid contact">
 
 			<div class="link-navigation">
-				<a target="_blank" href="https://www.linkedin.com/in/joseph-biwer-b0a48b132/">	<!-- Linked In -->
+				<a target="_blank" href="https://www.linkedin.com/in/nancywang882">	<!-- Linked In -->
 					<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 478.165 478.165" style="enable-background:new 0 0 478.165 478.165;" xml:space="preserve">
 					<g>
 						<path id="LinkedIn__x28_alt_x29__3_" d="M442.78,0H35.424C15.859,0,0,15.401,0,34.288v409.688
@@ -111,7 +176,7 @@
 					</g>
 					</svg>
 				</a>
-				<a target="_blank" href="https://github.com/josephbiwer">	<!-- Github -->
+				<a target="_blank" href="https://github.com/nancywang882">	<!-- Github -->
 					<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="438.536px" height="438.536px" viewBox="0 0 438.536 438.536" style="enable-background:new 0 0 438.536 438.536;" xml:space="preserve">
 					<g>
 						<g>
@@ -153,35 +218,7 @@
 					</g>
 					</svg>
 				</a>
-				<a target="_blank" href="https://codepen.io/josephbiwer/">
-					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 512 512">
-					  <g>
-					    <polygon points="164,240.6 164,271.1 186.2,255.5  "></polygon>
-					    <polygon points="300.4,241.8 336.2,217.7 266.6,169.3 266.8,217.4  "></polygon>
-					    <polygon points="242,216.3 242,169.3 173.3,217.4 207.65,240.4  "></polygon>
-					    <path d="m374,0h-236c-76.2,0-138,61.8-138,138v236c0,76.2 61.8,138 138,138h236c76.2,0 138-61.8 138-138v-236c0-76.2-61.8-138-138-138zm-3,291.5c0,6.2-3.3,12.1-8.5,15.5l-97.1,64.1c-6.2,4.1-14.35,4.1-20.55,0l-95.325-62.9c-5.2-3.4-8.525-9.3-8.525-15.5v-70.2c0-6.1 3.2-11.8 8.2-15.3l93.6-65.2c6.3-4.4 14.65-4.5 20.95-0.3l98.725,65.3c5.2,3.4 8.525,9.3 8.525,15.5v69z"></path>
-					    <polygon points="267,293.4 267,340.9 336.05,294.7 300.275,271.2  "></polygon>
-					    <polygon points="243,293.5 208.15,270.2 173.625,294.4 243,340.833  "></polygon>
-					    <polygon points="346,271.9 346,240.6 322.4,256.4  "></polygon>
-					    <polygon points="252.1,239.4 229.6,255.1 255.1,272.2 278.3,256.6  "></polygon>
-					  </g>
-					</svg>
-				</a>
-				<a target="_blank" href="https://dribbble.com/jjxseph">	<!-- Dribbble -->
-					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 512 512">
-					  <g>
-					    <path d="m248.4,216.7c-19.2-33.9-39.7-62.45-43.8-68.15-32.9,15.7-57.6,46.45-65.5,82.45 0.4,0 0.8,0 1.2,0 11,0 56.7-0.8 108.1-14.3z"></path>
-					    <path d="m264.1,256.9c1.3-0.4 2.7-0.8 4-1.2-2.8-6.4-5.9-12.6-9.1-18.9-53,15.8-104.6,17.2-119.4,17.2-1.3,0-2.4,0-3.1,0-0.1,1-0.1,1.7-0.1,2.7 0,30.3 11.4,57.9 30,79.1 5.1-8.4 37.9-59.6 97.7-78.9z"></path>
-					    <path d="m334.8,166.7c-21.1-18.5-48.6-29.7-78.8-29.7-9.3,0-18.3,1.1-27,3.1 4.9,6.6 25.3,34.8 44,69 40.4-15.3 58.5-37.8 61.8-42.4z"></path>
-					    <path d="M374,0H138C61.8,0,0,61.8,0,138v236c0,76.2,61.8,138,138,138h236c76.2,0,138-61.8,138-138V138C512,61.8,450.2,0,374,0z    M256,397.7c-78.1,0-141.6-63.4-141.6-141.4S177.9,114.9,256,114.9s141.6,63.4,141.6,141.4S334.1,397.7,256,397.7z"></path>
-					    <path d="m276.8,277c-65.5,23-90.3,67.35-93.7,74.05 20.2,15.6 45.5,24.875 72.9,24.875 16.4,0 32-3.262 46.2-9.162-1.9-11.1-8.9-46.763-25.3-89.763h-0.1z"></path>
-					    <path d="m282.8,228.3c2.7,5.6 5.3,11.2 7.7,16.8 0.8,1.9 1.6,3.8 2.4,5.7 9.3-1.2 18.5-1.6 27.3-1.6 27.2,0 49.9,4.2 55.3,5.3-0.4-27.5-10.3-52.8-26.4-72.8-4.1,5.4-24.3,29.3-66.3,46.6z"></path>
-					    <path d="m300.8,271c14.9,41.1 21.3,74.7 22.9,83.9 26.2-18.1 44.9-46.3 50.3-78.8-4.6-1.4-24.1-6.9-49.1-6.9-7.6,0-15.8,0.5-24.1,1.8z"></path>
-					  </g>
-					</svg>
-				</a>
-				<p> Site made with some good ole' fashioned HTML, <br>
-				CSS, and Javascript (and with a bit of jQuery) </p>
+				<p> Thanks for visiting my website! </p>
 			</div>
 
 		</div>
