--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
+	<link rel="shortcut icon" type="image/x-icon" href="content/logo.png" />
+
 	<title>Nancy Wang</title>
 
 	<!-- Custom CSS -->
