Changed file size

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				</div>
 
 				<div class="project-card">
-					<img src="content/R2R-Logo.png" alt="Gif of site">
+					<img src="content/R2R-Logo.jpg" alt="Gif of site">
 					<div class="description">
 						<h5>RECEIPTS TO RECIPES</h5>
 						<h6>Python | Open CV</h6>
@@ -111,7 +111,7 @@
 				</div>
 
 				<div class="project-card">
-					<img src="content/SynLogo.png" alt="Gif of site">
+					<img src="content/SynLogo.jpg" alt="Gif of site">
 					<div class="description">
 						<h5>Synthesia</h5>
 						<h6>Javascript | HTML</h6>
@@ -135,7 +135,7 @@
 				</div>
 
 				<div class="project-card">
-					<img src="content/bqLogo.png" alt="Gif of site">
+					<img src="content/bqLogo.jpg" alt="Gif of site">
 					<div class ="description">
 						<h5>Biquadris</h5>
 						<h6>C++</h6>
@@ -147,7 +147,7 @@
 				</div>
 
 				<div class="project-card">
-					<img src="content/appleRunLogo.png" alt="Gif of site">
+					<img src="content/appleRunLogo.jpg" alt="Gif of site">
 					<div class="description">
 						<h5>Apple Run</h5>
 						<h6>Unity | C#</h6>
