--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				</div>
 
 				<div class="project-card">
-					<img src="content/R2R-Logo.jpg" alt="Gif of site">
+					<img src="content/R2R-logo.jpg" alt="Gif of site">
 					<div class="description">
 						<h5>RECEIPTS TO RECIPES</h5>
 						<h6>Python | Open CV</h6>
