--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<h5>RECEIPTS TO RECIPES</h5>
 						<h6>Python | Open CV</h6>
 						<ul style="list-style-type:circle;">
-							<li>Program proides suggestions for recipes given image of a receipt</li>
+							<li>Program provides suggestions for recipes from a receipt image</li>
 							<li>Utilized Tesseract and Open CV to create OCR in Python</li>
 						</ul>
 					</div>
