--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 				<div class="terminal-window">
 					<div class = "statement">
 						<div class = "input-statement">Nancy.education</div>
-						<div class = "return-statement">"2B Computer Science and Business Administration - University of Waterloo"</div>
+						<div class = "return-statement">"3A Computer Science and Business Administration - University of Waterloo"</div>
 						<br />
 						<div class = "input-statement">Nancy.skills</div>
-						<div class = "return-statement">["C++", "Java", "C", "Python", "SQL", "Scheme", "git"]</div>
+						<div class = "return-statement">["C++", "Java", "C", "Python", "SQL", "Javascript", "git"]</div>
 						<br />
 						<div class = "input-statement">Nancy.resume</div>
 						<div class = "return-statement"><a rel="noopener" 
@@ -111,13 +111,13 @@
 				</div>
 
 				<div class="project-card">
-					<img src="content/SynLogo.jpg" alt="Gif of site">
+					<img src="content/PlaceHolder.png" alt="Gif of site">
 					<div class="description">
-						<h5>Synthesia</h5>
-						<h6>Javascript | HTML</h6>
+						<h5>PlaceHolder</h5>
+						<h6>Javascript | HTML | React | Raspberry PI | Python</h6>
 						<ul style="list-style-type:circle;">
-							<li>Online music visualizer that is compatible with any audio file</li>
-							<li>Offers options to change different visual components of the app</li>
+							<li>Web application that updates the user with real time open seat availability</li>
+							<li>Attached pressure sensors to Raspberry Pi to send data to servers</li>
 						</ul>
 					</div>
 				</div>
